--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
 
         .options-grid { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; position: relative; min-height: 280px; }
 
-        /* BUTTONS WITH GLASS SHINE EFFECT */
         button {
             width: 100%; padding: 14px; border: 2px solid #ffccd5;
             background: rgba(255, 255, 255, 0.9); border-radius: 20px;
@@ -82,7 +81,6 @@
             color: white; border-color: white; transform: scale(1.03); 
         }
 
-        /* Glass Shine Animation */
         .shine-effect::after {
             content: '';
             position: absolute;
@@ -139,7 +137,7 @@
         <p>Follow the instructions:</p>
         <div style="text-align: left; margin: 20px 0; color: #777; font-size: 0.9rem;">
             <div>✨ 1. Don’t Smile.</div>
-            <div>✨ 2. Correct all the answers (11/11).</div>
+            <div>✨ 2. Correct all the answers (20/20).</div>
             <div>✨ 3. Unlock your Passcode for your surprise</div>
         </div>
         <button onclick="startQuiz()">Babbee Are you Ready! ✨</button>
@@ -155,11 +153,20 @@
     <div id="q8" class="page"><h2>Question 8</h2><p>What is my favorite thing about you?</p><div class="options-grid"><button onclick="next(this, false)">Your Eyes</button><button onclick="next(this, false)">Your Smile</button><button onclick="next(this, true)">Everything!</button><button onclick="next(this, false)">Effortless Movement</button></div></div>
     <div id="q9" class="page"><h2>Question 9</h2><p>Which is my fav thing you says?</p><div class="options-grid"><button onclick="next(this, false)">Bibinee</button><button onclick="next(this, true)">Entha Bibinneee</button><button onclick="next(this, false)">Babbyyy</button><button onclick="next(this, false)">Poddaaa</button></div></div>
     <div id="q10" class="page"><h2>Question 10</h2><p>Do you love me?</p><div class="options-grid"><button onclick="next(this, true)">YESSS!</button><button onclick="next(this, false)">No</button><button onclick="next(this, false)">Maybe</button><button onclick="next(this, false)">I'll think about it</button></div></div>
-    
-    <div id="q11" class="page">
-        <h2>Question 11</h2>
+    <div id="q11" class="page"><h2>Question 11</h2><p>What is the one thing I can't live without?</p><div class="options-grid"><button onclick="next(this, false)">My Phone</button><button onclick="next(this, true)">Your presence</button><button onclick="next(this, false)">Football</button><button onclick="next(this, false)">Sleep</button></div></div>
+    <div id="q12" class="page"><h2>Question 12</h2><p>When we fight, what makes me calm instantly?</p><div class="options-grid"><button onclick="next(this, false)">Food</button><button onclick="next(this, false)">Arguments</button><button onclick="next(this, true)">A tight hug & your smile</button><button onclick="next(this, false)">Silence</button></div></div>
+    <div id="q13" class="page"><h2>Question 13</h2><p>What is my favorite nickname for you?</p><div class="options-grid"><button onclick="next(this, true)">Babbyyy</button><button onclick="next(this, false)">Archu</button><button onclick="next(this, false)">Ammu</button><button onclick="next(this, false)">Madhu</button></div></div>
+    <div id="q14" class="page"><h2>Question 14</h2><p>Which song reminds me of you the most?</p><div class="options-grid"><button onclick="next(this, false)">Rock music</button><button onclick="next(this, true)">Every romantic melody</button><button onclick="next(this, false)">Sad songs</button><button onclick="next(this, false)">Rap</button></div></div>
+    <div id="q15" class="page"><h2>Question 15</h2><p>How many times a day do I think about you?</p><div class="options-grid"><button onclick="next(this, false)">10 times</button><button onclick="next(this, false)">Only when free</button><button onclick="next(this, true)">It's a continuous loop</button><button onclick="next(this, false)">50 times</button></div></div>
+    <div id="q16" class="page"><h2>Question 16</h2><p>What's our "signature" thing?</p><div class="options-grid"><button onclick="next(this, false)">Watching Movies</button><button onclick="next(this, true)">Annoying each other</button><button onclick="next(this, false)">Just Talking</button><button onclick="next(this, false)">Eating</button></div></div>
+    <div id="q17" class="page"><h2>Question 17</h2><p>Where is our dream destination?</p><div class="options-grid"><button onclick="next(this, false)">Paris</button><button onclick="next(this, true)">Anywhere, as long as we're together</button><button onclick="next(this, false)">London</button><button onclick="next(this, false)">Maldives</button></div></div>
+    <div id="q18" class="page"><h2>Question 18</h2><p>What do I want from you forever?</p><div class="options-grid"><button onclick="next(this, false)">Gifts</button><button onclick="next(this, true)">Your hand in mine</button><button onclick="next(this, false)">Treats</button><button onclick="next(this, false)">Everything</button></div></div>
+    <div id="q19" class="page"><h2>Question 19</h2><p>Are you the best thing that ever happened to me?</p><div class="options-grid"><button onclick="next(this, true)">Without a doubt, YES!</button><button onclick="next(this, false)">Maybe</button><button onclick="next(this, false)">Second best</button><button onclick="next(this, false)">I'm not sure</button></div></div>
+
+    <div id="q20" class="page">
+        <h2>Question 20</h2>
         <p>Will you be my Valentine? </p>
-        <div class="options-grid" id="q11-grid">
+        <div class="options-grid" id="q20-grid">
             <button id="yesBtn" onclick="finalYes(this)">YES!</button>
             <button id="noButton" onmouseover="moveNoButton()" onclick="moveNoButton()">No way</button>
         </div>
@@ -230,7 +237,6 @@
         length: Math.random() * 200 + 50, x: Math.random() * canvas.width
     }));
 
-    // Multi-Colored Music Symbols
     const notes = ['♪', '♫', '♬', '♩', '∮', '♭'];
     const musicalParticles = Array.from({length: 45}, () => ({
         x: Math.random() * window.innerWidth,
@@ -240,7 +246,7 @@
         speed: Math.random() * 2 + 1,
         opacity: Math.random() * 0.6 + 0.4,
         drift: Math.random() * 2 - 1,
-        color: colors[Math.floor(Math.random() * colors.length)] // Different colors!
+        color: colors[Math.floor(Math.random() * colors.length)]
     }));
 
     function animate() {
@@ -265,7 +271,7 @@
 
         musicalParticles.forEach(p => {
             mctx.font = `${p.size}px Arial`;
-            mctx.fillStyle = p.color; // Applying the multi-color
+            mctx.fillStyle = p.color;
             mctx.globalAlpha = p.opacity;
             mctx.fillText(p.text, p.x, p.y);
             p.y -= p.speed;
@@ -286,8 +292,7 @@
     }
 
     function next(btn, isCorrect) {
-        btn.classList.add('shine-effect'); // Trigger glass shine
-        
+        btn.classList.add('shine-effect');
         if(isCorrect) { 
             score++; 
             btn.style.backgroundColor = "#b9fbc0"; 
@@ -306,7 +311,7 @@
 
     function moveNoButton() {
         const btn = document.getElementById('noButton');
-        const grid = document.getElementById('q11-grid');
+        const grid = document.getElementById('q20-grid'); // Corrected target to q20
         const maxX = grid.clientWidth - btn.offsetWidth;
         const maxY = grid.clientHeight - btn.offsetHeight;
         let newX, newY;
@@ -323,7 +328,7 @@
         const effectInterval = setInterval(() => { createMegaSpark(30); createCrackers(20); }, 100);
         setTimeout(() => {
             clearInterval(effectInterval);
-            document.getElementById(`q11`).classList.remove('active');
+            document.getElementById(`q20`).classList.remove('active'); // Transition from Q20
             document.getElementById('result-page').classList.add('active');
             showResult();
         }, 5000); 
@@ -367,14 +372,14 @@
     function showResult() {
         const text = document.getElementById('result-text');
         const giftBtn = document.getElementById('gift-btn');
-        if (score === 11) {
-            text.innerText = "Perfect Score 11/11! Archana, you're amazing! ❤️";
+        if (score === 20) { // Updated to 20/20
+            text.innerText = "Perfect Score 20/20! Archana, you're amazing! ❤️";
             giftBtn.style.display = 'block'; giftBtn.innerText = "Claim Gifts"; giftBtn.onclick = () => {
                 document.getElementById('result-page').classList.remove('active');
                 document.getElementById('gift-page').classList.add('active');
             };
         } else {
-            text.innerText = `Babbyy, you need 11/11 to see the surprise! Try again!`;
+            text.innerText = `Babbyy, you need 20/20 to see the surprise! Try again!`;
             giftBtn.style.display = 'block'; giftBtn.innerText = "Restart 🔄"; giftBtn.onclick = () => location.reload();
         }
     }
